src/objects/HQ_Sync_Compressed_Data__c.object
<CustomObject>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_100__c</fullName>
        <label>Identifier 100</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_10__c</fullName>
        <label>Identifier 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier_11__c</fullName>
        <label>Identifier 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offset__c</fullName>
        <label>Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <picklist>
            <picklistValues>
                <fullName>CommCareHQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CommCareHQ India</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Inform about fetched data from HQ API with Offest and Date</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Malt Tables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_100__c</fullName>
        <label>Value 100</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_10__c</fullName>
        <label>Value 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_11__c</fullName>
        <label>Value 11</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>HQ Sync Compressed Data</label>
    <nameField>
        <displayFormat>HQ-Sync-{000000000}</displayFormat>
        <label>HQ Sync Compressed Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HQ Sync Compressed Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>